--- a/src/app/Pages/login/login.component.html
+++ b/src/app/Pages/login/login.component.html
@@ -1,36 +1,21 @@
 <div class="container justify-content-center">
   <div class="row justify-content-center">
     <div class="col-md-4">
-      <form class="px-20 py-5">
+      <form class="px-20 py-5" [formGroup]="loginForm" (ngSubmit)="onLogin()">
         <!-- Email input -->
         <div class="form-outline mb-4">
-          <input type="email" id="form1Example1" class="form-control" name="email" [(ngModel)]="user.email" [ngModelOptions]="{standalone: true}">
+          <input type="email"  class="form-control" name="email" formControlName="email">
           <label class="form-label" for="form1Example1" >Email address</label>
         </div>
 
         <!-- Password input -->
         <div class="form-outline mb-4">
-          <input type="password" id="form1Example2" class="form-control" [(ngModel)]="user.password" [ngModelOptions]="{standalone: true}"/>
+          <input type="password" class="form-control" formControlName="password"/>
           <label class="form-label" for="form1Example2">Password</label>
         </div>
 
         <!-- 2 column grid layout for inline styling -->
         <div class="row mb-4">
-          <div class="col d-flex justify-content-center">
-            <!-- Checkbox -->
-            <div class="form-check">
-              <input
-                class="form-check-input"
-                type="checkbox"
-                value=""
-                id="form1Example3"
-                checked
-              />
-              <label class="form-check-label" for="form1Example3">
-                Remember me
-              </label>
-            </div>
-          </div>
 
           <div class="col">
             <!-- Simple link -->
@@ -44,6 +29,7 @@
       <div class="dropdown-divider"></div>
       <a class="dropdown-item" routerLink="/register">New around here? Sign up</a>
       <a class="dropdown-item" href="#">Forgot password?</a>
+      
     </div>
   </div>
 </div>
