--- a/src/app/Pages/login/login.component.html
+++ b/src/app/Pages/login/login.component.html
@@ -1,35 +1,38 @@
-<div class="container justify-content-center">
-  <div class="row justify-content-center">
-    <div class="col-md-4">
-      <form class="px-20 py-5" [formGroup]="loginForm" (ngSubmit)="onLogin()">
+<div class="container justify-content-center" >
+  <div class="row justify-content-center" >
+    <div class="col-md-4 ">
+      <form class="px-20 py-3" [formGroup]="loginForm" (ngSubmit)="onLogin()">
+        <mdb-form-control>
+      
         <!-- Email input -->
         <div class="form-outline mb-4">
-          <input type="email"  class="form-control" name="email" formControlName="email">
-          <label class="form-label" for="form1Example1" >Email address</label>
+          <input mdbInput type="email"  class="form-control" name="email" formControlName="email">
+          <label mdbLabel class="form-label" for="form1Example1" >Email</label>
         </div>
-
+      </mdb-form-control>
+        <mdb-form-control>
         <!-- Password input -->
         <div class="form-outline mb-4">
-          <input type="password" class="form-control" formControlName="password"/>
-          <label class="form-label" for="form1Example2">Password</label>
+          <input mdbInput type="password" class="form-control" formControlName="password" />
+          <label mdbLabel class="form-label" for="form1Example2">Contraseña</label>
         </div>
-
+      </mdb-form-control>
         <!-- 2 column grid layout for inline styling -->
         <div class="row mb-4">
 
           <div class="col">
             <!-- Simple link -->
-            <a href="#!">Forgot password?</a>
+            <a href="#!">¿Olvido su contraseña?</a>
           </div>
         </div>
 
         <!-- Submit button -->
-        <button type="submit" class="btn btn-primary btn-block">Sign in</button>
+        <button type="submit" class="btn btn-primary btn-block">Inicar Sesión</button>
       </form>
       <div class="dropdown-divider"></div>
-      <a class="dropdown-item" routerLink="/register">New around here? Sign up</a>
-      <a class="dropdown-item" href="#">Forgot password?</a>
-      
+      <a class="dropdown-item" routerLink="/register">¿Eres nuevo? Registrate!!!</a>
+      <a class="dropdown-item" href="#">Recuperar su contraseña</a>
     </div>
+    
   </div>
 </div>
