--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,62 +1,72 @@
-
-
-  <!-- Navbar -->
-  <nav
-    class="navbar navbar-expand-lg navbar-light"
-    style="background-color: #f7b707f5"
-  >
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">Pexshop</a>
-      <button
-        class="navbar-toggler"
-        type="button"
-        (click)="togglerSecondExample.toggle()"
-        aria-controls="navbarTogglerDemo02"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
-        <i class="fas fa-bars"></i>
-      </button>
-      <div
-        class="collapse navbar-collapse"
-        id="navbarTogglerDemo02"
-        mdbCollapse
-        #togglerSecondExample="mdbCollapse"
-      >
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0 my-sm-0">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#"
-              >Mis mascotas</a
-            >
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Acerca de nosotros</a>
-          </li>
-        </ul>
-        <!-- Dark -->
-        <div mdbDropdown class="btn-group ms-auto">
-          <button
-            type="button"
-            class="btn btn-dark dropdown-toggle"
-            mdbDropdownToggle
-            aria-expanded="false"
+<!-- Navbar -->
+<nav
+  class="navbar navbar-expand-lg navbar-light"
+  style="background-color: #f7b707f5"
+>
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">Pexshop</a>
+    <button
+      class="navbar-toggler"
+      type="button"
+      (click)="togglerSecondExample.toggle()"
+      aria-controls="navbarTogglerDemo02"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
+    >
+      <i class="fas fa-bars"></i>
+    </button>
+    <div
+      class="collapse navbar-collapse"
+      id="navbarTogglerDemo02"
+      mdbCollapse
+      #togglerSecondExample="mdbCollapse"
+    >
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0 my-sm-0">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#" *ngIf="authSvc.isLogged | async"
+            >Mis mascotas</a
           >
-            <i class="fas fa-user"></i>
-          </button>
-          <ul mdbDropdownMenu class="dropdown-menu ms-auto">
-            <li><a class="dropdown-item" routerLink="/login" routerLinkActive="active">Iniciar Sesión</a></li>
-            <li><a class="dropdown-item" href="#">Cerrar Sesión</a></li>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Link</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Acerca de nosotros</a>
+        </li>
+      </ul>
+      <!-- Dark -->
+      <div mdbDropdown class="btn-group ms-auto">
+        <button
+          type="button"
+          class="btn btn-dark dropdown-toggle"
+          mdbDropdownToggle
+          aria-expanded="false"
+        >
+          <i class="fas fa-user"></i>
+        </button>
+        <ul mdbDropdownMenu class="dropdown-menu ms-auto">
+          <ng-template #elseBlock>
+            <li>
+              <a
+                class="dropdown-item"
+                routerLink="/login"
+                routerLinkActive="active"
+                >Iniciar Sesión</a
+              >
+            </li>
+          </ng-template>
+          <div *ngIf="authSvc.isLogged | async; else elseBlock">
             <li>
               <a class="dropdown-item" href="#">Perfil</a>
             </li>
-          </ul>
-        </div>
+            <li>
+              <a class="dropdown-item" href="#">Cerrar Sesión</a>
+            </li>
+          </div>
+        </ul>
       </div>
     </div>
-  </nav>
-  <!-- Navbar -->
-  <router-outlet></router-outlet>
-
+  </div>
+</nav>
+<!-- Navbar -->
+<router-outlet></router-outlet>
