Fix routes login & register

--- a/src/app/Pages/register/register.component.html
+++ b/src/app/Pages/register/register.component.html
@@ -52,7 +52,7 @@
         </button>
       </form>
       <div class="dropdown-divider"></div>
-      <a href="#!">Ya tiene cuenta, inicie sesión!</a>
+      <a routerLink='/login'>Ya tiene cuenta, inicia sesión!</a>
     </div>
   </div>
 </div>
